--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -151,6 +151,24 @@ md-toolbar#nav_f {
   .banner {
     padding-top: 50px;
     transform: translateY(50%);
-    height: 500px; } }
+    height: 500px; }
+
+  #navbar-left .navbar-left-item .material-icons {
+    font-size: 1.6em;
+    vertical-align: middle; }
+  #navbar-left a.navbar-left-item {
+    text-decoration: none;
+    font-size: 1.2em; }
+  #navbar-left a:active.navbar-left-item, #navbar-left a:visited.navbar-left-item {
+    color: black; }
+  #navbar-left a:hover.navbar-left-item {
+    color: #72b3ea; }
+  #navbar-left ul li {
+    padding-bottom: 20px; }
+
+  .bar-nps-title {
+    font-size: 1.5em;
+    float: right;
+    padding-bottom: 50px; } }
 
 /*# sourceMappingURL=styles.css.map */
