--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -137,8 +137,16 @@ md-toolbar#nav_f {
   background-color: white !important;
   color: black !important; }
 
-.medium {
+.icon-medium {
   font-size: 1.5em; }
+
+.icon-large {
+  font-size: 2em; }
+
+#form-submit {
+  bottom: 15px; }
+  #form-submit i {
+    vertical-align: sub; }
 
 @media only screen and (min-width: 992px) {
   .medium {
@@ -150,7 +158,7 @@ md-toolbar#nav_f {
 
   .banner {
     padding-top: 50px;
-    transform: translateY(50%);
+    transform: translateY(25%);
     height: 500px; }
 
   #navbar-left .navbar-left-item .material-icons {
@@ -169,6 +177,9 @@ md-toolbar#nav_f {
   .bar-nps-title {
     font-size: 1.5em;
     float: right;
-    padding-bottom: 50px; } }
+    padding-bottom: 50px; }
+
+  .footer-text {
+    font-size: 1.7em; } }
 
 /*# sourceMappingURL=styles.css.map */
