--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -46,12 +46,23 @@ md-toolbar#nav_f{
     color: black !important;
 }
 
-.medium{
+.icon-medium{
     font-size: 1.5em;
+}
+
+.icon-large{
+    font-size: 2em;
 }
 
 .slogan{
     
+}
+
+#form-submit{
+    bottom: 15px;
+    i{
+        vertical-align: sub;
+    }
 }
 
 @media only screen and (min-width: 481px) {
@@ -70,7 +81,7 @@ md-toolbar#nav_f{
     
     .banner{
         padding-top: 50px;
-        transform: translateY(50%);
+        transform: translateY(25%);
         height: 500px;
     }
     
@@ -100,6 +111,10 @@ md-toolbar#nav_f{
         font-size: 1.5em;
         float: right;
         padding-bottom: 50px;
+    }
+    
+    .footer-text{
+        font-size: 1.7em;
     }
 
 }
