--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -142,15 +142,15 @@ md-toolbar#nav_f {
   background-color: white !important;
   color: black !important;
   position: fixed;
-  transition: height .4s ease-out, max-height .3s ease-out;
-  /*box-shadow: 0 2px 2px 0 rgba(0,0,0,.14),0 3px 1px -2px rgba(0,0,0,.2),0 1px 5px 0 rgba(0,0,0,.12);*/ }
+  transition: height .4s ease-out, max-height .3s ease-out, box-shadow .5s ease-in; }
   md-toolbar#nav_f img {
     transition: width .3s ease-in-out;
     width: 200px; }
 
 .nav-shrink {
   height: 50px !important;
-  max-height: 50px !important; }
+  max-height: 50px !important;
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12); }
   .nav-shrink img {
     width: 140px !important; }
 
