--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -49,12 +49,11 @@ md-toolbar#nav_f{
     background-color: white !important;
     color: black !important;
     position: fixed;
-    transition: height .4s ease-out, max-height .3s ease-out;
+    transition: height .4s ease-out, max-height .3s ease-out, box-shadow .5s ease-in;
     img{
         transition: width .3s ease-in-out;
         width: 200px;
     }
-    /*box-shadow: 0 2px 2px 0 rgba(0,0,0,.14),0 3px 1px -2px rgba(0,0,0,.2),0 1px 5px 0 rgba(0,0,0,.12);*/
 }
 
 .nav-shrink{
@@ -63,6 +62,7 @@ md-toolbar#nav_f{
     img{
         width: 140px !important;
     }
+    box-shadow: 0 2px 2px 0 rgba(0,0,0,.14),0 3px 1px -2px rgba(0,0,0,.2),0 1px 5px 0 rgba(0,0,0,.12);
 }
 
 .fa-facebook-square, .fa-facebook-text, 
