--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,4 +1,5 @@
-// imports 
+// imports
+@import "reset";
 @import "variables";
 @import "gmail-scrollbars";
 
@@ -10,7 +11,7 @@ object[type^="application/gas-events-uni"] {
     display: none;
 }
 
-html, 
+html,
 body {
     text-shadow: 0 0 #fff;
     text-rendering: optimizeLegibility;
@@ -33,45 +34,107 @@ body {
 
 .fa-facebook-square:hover, .fa-twitter-square:hover, .fa-linkedin-square:hover, .fa-instagram:hover{
     color: $my-primary-color;
+    opacity: 1;
 }
 
 .social-icons{
+    padding-top: 22px;
+    transition: margin-bottom .3s ease-in-out, padding-top .3s ease-in-out;
     ul{
         list-style: none;
+        opacity: 0.9;
     }
-    transition: margin-bottom .3s ease-in-out;
-    margin-bottom: 15px;
+}
+
+.ideais{
+  background-color: $my-primary-color;
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+
+.footer{
+  background-color: #212121 !important;
 }
 
 md-toolbar#nav_f{
-    height: 90px;
-    max-height: 90px;
-    background-color: white !important;
+    height: 110px;
+    max-height: 110px;
+    /*background-color: rgba(0, 0, 0, 0.49) !important;*/
+    background-color: rgba(113, 180, 235, 0.49) !important;
+    /*background-color: rgba(33, 150, 243, 0.49) !important;*/
     color: black !important;
     position: fixed;
     transition: height .4s ease-out, max-height .3s ease-out, box-shadow .5s ease-in;
     img{
         transition: width .3s ease-in-out;
         width: 200px;
+        padding-top: 10px;
     }
+}
+
+.transparent{
+    background-color: transparent !important;
+}
+
+.hero{
+    background-image: url("/assets/img/546186711743c1f4342d1efe_Hero.jpg");
+    background-position: 50% 0px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 700px;
 }
 
 .nav-shrink{
     height: 50px !important;
     max-height: 50px !important;
     img{
-        width: 140px !important;
+        width: 120px !important;
+        padding-top: 5px !important;
     }
     box-shadow: 0 2px 2px 0 rgba(0,0,0,.14),0 3px 1px -2px rgba(0,0,0,.2),0 1px 5px 0 rgba(0,0,0,.12);
 }
 
-.fa-facebook-square, .fa-facebook-text, 
-.fa-twitter-square, .fa-twitter-text, 
-.fa-github-square, .fa-github-text, 
+.fa-facebook-square, .fa-facebook-text,
+.fa-twitter-square, .fa-twitter-text,
+.fa-github-square, .fa-github-text,
 .fa-linkedin-square, .fa-linkedin-text,
 .fa-google-plus-square, .fa-google-plus-text,
 .fa-instagram, .fa-instagram-text {
     transition: color .3s ease-in-out;
+}
+
+.white-text{
+    color: white;
+}
+
+.amber-text{
+  color: #FFC107;
+}
+
+.blue-text{
+  color: $my-primary-color;
+}
+
+.center{
+    text-align: center;
+}
+
+.center-align{
+    margin: 0 auto;
+}
+
+.promo-caption{
+    font-size: 1.5em;
+    line-height: 2em;
+}
+
+.promo-description{
+    line-height: 1.5em;
+}
+
+.justify{
+  text-align: justify;
 }
 
 .icon-medium{
@@ -82,19 +145,49 @@ md-toolbar#nav_f{
     font-size: 2em;
 }
 
+.icon-xxxxlarge{
+    font-size: 6em;
+}
+
 .slogan{
-    margin-bottom: 20px;    
+    margin-bottom: 20px;
+}
+
+.slogan-text{
+    font-family: serif;
+    font-style: italic;
 }
 
 #form-submit{
-    bottom: 15px;
     i{
-        vertical-align: sub;
+      vertical-align: middle;
+      padding-bottom: 5px;
+    }
+}
+
+.btn-send{
+  height: 30px;
+  top: 10px;
+}
+
+#form-contact{
+    input, textarea {
+        border-bottom: 1px solid #fff;
+        color: white !important;
+    }
+    md-input-container.md-default-theme .md-input, md-input-container .md-input {
+        border-color: rgba(255,255,255,1);
+    }
+    #form-email{
+        color: white;
+    }
+    i.icon-email{
+      padding-top: 19px;
     }
 }
 
 @media only screen and (min-width: 481px) {
-    
+
 }
 
 @media only screen and (min-width: 992px) {
@@ -103,30 +196,36 @@ md-toolbar#nav_f{
     }
 
     .slogan-text{
-        font-size: 1.2em;
-        padding-top: 40px;
+        font-size: 1em;
+        padding-top: 52px;
+        text-transform: uppercase;
     }
-    
+
     .slogan{
         transition: margin-bottom .3s ease-in-out;
     }
-    
+
     .nav-shrink{
         .slogan{
             margin-bottom: 40px;
         }
+        .slogan-text{
+            padding-top: 40px;
+        }
         .social-icons{
-            margin-bottom: 40px;
+            padding-top: 0px;
         }
     }
-    
+
     .banner{
         padding-top: 50px;
         transform: translateY(25%);
         height: 500px;
     }
-    
+
     #navbar-left{
+        padding-top: 150px;
+        padding-left: 65px;
         .navbar-left-item .material-icons{
             font-size: 1.6em;
             vertical-align: middle;
@@ -136,24 +235,31 @@ md-toolbar#nav_f{
             font-size: 1.2em;
         }
         a.navbar-left-item, a:active.navbar-left-item, a:visited.navbar-left-item{
-            color: black;
+            color: white;
         }
         a:hover.navbar-left-item{
             color: $my-primary-color;
         }
         ul{
             li{
-                padding-bottom: 20px;
+                padding-bottom: 30px;
             }
         }
+
     }
-    
+
+    .md-sidenav-left{
+        md-content.md-default-theme, md-content {
+            background-color: transparent !important;
+        }
+    }
+
     .bar-nps-title{
         font-size: 1.5em;
         float: right;
         padding-bottom: 50px;
     }
-    
+
     .footer-text{
         font-size: 1.7em;
     }
