--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -297,7 +297,7 @@ md-toolbar#nav_f {
     padding-top: 10px; }
 
 .transparent {
-  background-color: transparent !important; }
+  /*background-color: transparent !important;*/ }
 
 .hero {
   background-image: url("/assets/img/546186711743c1f4342d1efe_Hero.jpg");
@@ -308,11 +308,11 @@ md-toolbar#nav_f {
   height: 700px; }
 
 .nav-shrink {
-  height: 50px !important;
-  max-height: 50px !important;
+  height: 55px !important;
+  max-height: 55px !important;
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12); }
   .nav-shrink img {
-    width: 120px !important;
+    width: 100px !important;
     padding-top: 5px !important; }
 
 .fa-facebook-square, .fa-facebook-text,
@@ -382,6 +382,63 @@ md-toolbar#nav_f {
 #form-contact i.icon-email {
   padding-top: 19px; }
 
+#navbar-left {
+  padding-top: 50px;
+  padding-left: 50px; }
+  #navbar-left .navbar-left-item .material-icons {
+    font-size: 1.3em;
+    vertical-align: middle; }
+
+a.navbar-left-item {
+  font-size: 1.2em; }
+
+a.navbar-left-item, a:active.navbar-left-item, a:visited.navbar-left-item {
+  color: black;
+  text-decoration: none; }
+
+a:hover.navbar-left-item {
+  color: #72b3ea; }
+
+ul li {
+  padding-bottom: 30px; }
+
+.bar-nps-title {
+  font-size: 1.5em;
+  float: right;
+  padding-bottom: 50px; }
+
+.form-contact-text {
+  font-size: 1.7em; }
+
+@media only screen and (min-width: 481px) {
+  a.navbar-left-item, a:active.navbar-left-item, a:visited.navbar-left-item {
+    color: white; }
+
+  .transparent {
+    background-color: transparent !important; }
+
+  .slogan-text {
+    padding-top: 50px; }
+
+  #navbar-left {
+    padding-top: 150px;
+    padding-left: 65px; }
+    #navbar-left .navbar-left-item .material-icons {
+      font-size: 1.6em;
+      vertical-align: middle; }
+
+  .nav-shrink .slogan {
+    margin-bottom: 40px; }
+  .nav-shrink .slogan-text {
+    padding-top: 40px; }
+  .nav-shrink .social-icons {
+    padding-top: 0px; }
+  .nav-shrink img {
+    width: 120px !important;
+    padding-top: 3px !important; }
+
+  .md-sidenav-left md-content.md-default-theme, .md-sidenav-left md-content {
+    background-color: transparent !important; } }
 @media only screen and (min-width: 992px) {
   .medium {
     font-size: 1.5em; }
@@ -394,36 +451,10 @@ md-toolbar#nav_f {
   .slogan {
     transition: margin-bottom .3s ease-in-out; }
 
-  .nav-shrink .slogan {
-    margin-bottom: 40px; }
-  .nav-shrink .slogan-text {
-    padding-top: 40px; }
-  .nav-shrink .social-icons {
-    padding-top: 0px; }
-
   .banner {
     padding-top: 50px;
     transform: translateY(25%);
     height: 500px; }
-
-  #navbar-left {
-    padding-top: 150px;
-    padding-left: 65px; }
-    #navbar-left .navbar-left-item .material-icons {
-      font-size: 1.6em;
-      vertical-align: middle; }
-    #navbar-left a.navbar-left-item {
-      text-decoration: none;
-      font-size: 1.2em; }
-    #navbar-left a.navbar-left-item, #navbar-left a:active.navbar-left-item, #navbar-left a:visited.navbar-left-item {
-      color: white; }
-    #navbar-left a:hover.navbar-left-item {
-      color: #72b3ea; }
-    #navbar-left ul li {
-      padding-bottom: 30px; }
-
-  .md-sidenav-left md-content.md-default-theme, .md-sidenav-left md-content {
-    background-color: transparent !important; }
 
   .bar-nps-title {
     font-size: 1.5em;
