--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -73,7 +73,7 @@ md-toolbar#nav_f{
 }
 
 .transparent{
-    background-color: transparent !important;
+    /*background-color: transparent !important;*/
 }
 
 .hero{
@@ -86,10 +86,10 @@ md-toolbar#nav_f{
 }
 
 .nav-shrink{
-    height: 50px !important;
-    max-height: 50px !important;
+    height: 55px !important;
+    max-height: 55px !important;
     img{
-        width: 120px !important;
+        width: 100px !important;
         padding-top: 5px !important;
     }
     box-shadow: 0 2px 2px 0 rgba(0,0,0,.14),0 3px 1px -2px rgba(0,0,0,.2),0 1px 5px 0 rgba(0,0,0,.12);
@@ -186,8 +186,79 @@ md-toolbar#nav_f{
     }
 }
 
-@media only screen and (min-width: 481px) {
+#navbar-left{
+    padding-top: 50px;
+    padding-left: 50px;
+    .navbar-left-item .material-icons{
+        font-size: 1.3em;
+        vertical-align: middle;
+    }
+}
 
+a.navbar-left-item{
+    font-size: 1.2em;
+}
+a.navbar-left-item, a:active.navbar-left-item, a:visited.navbar-left-item{
+    color: black;
+    text-decoration: none;
+}
+a:hover.navbar-left-item{
+    color: $my-primary-color;
+}
+ul{
+    li{
+        padding-bottom: 30px;
+    }
+}
+
+.bar-nps-title{
+    font-size: 1.5em;
+    float: right;
+    padding-bottom: 50px;
+}
+
+.form-contact-text{
+    font-size: 1.7em;
+}
+
+@media only screen and (min-width: 481px) {
+  a.navbar-left-item, a:active.navbar-left-item, a:visited.navbar-left-item{
+      color: white;
+  }
+  .transparent{
+      background-color: transparent !important;
+  }
+  .slogan-text{
+    padding-top: 50px;
+  }
+  #navbar-left{
+      padding-top: 150px;
+      padding-left: 65px;
+      .navbar-left-item .material-icons{
+          font-size: 1.6em;
+          vertical-align: middle;
+      }
+  }
+  .nav-shrink{
+      .slogan{
+          margin-bottom: 40px;
+      }
+      .slogan-text{
+          padding-top: 40px;
+      }
+      .social-icons{
+          padding-top: 0px;
+      }
+      img{
+          width: 120px !important;
+          padding-top: 3px !important;
+      }
+  }
+  .md-sidenav-left{
+      md-content.md-default-theme, md-content {
+          background-color: transparent !important;
+      }
+  }
 }
 
 @media only screen and (min-width: 992px) {
@@ -205,53 +276,10 @@ md-toolbar#nav_f{
         transition: margin-bottom .3s ease-in-out;
     }
 
-    .nav-shrink{
-        .slogan{
-            margin-bottom: 40px;
-        }
-        .slogan-text{
-            padding-top: 40px;
-        }
-        .social-icons{
-            padding-top: 0px;
-        }
-    }
-
     .banner{
         padding-top: 50px;
         transform: translateY(25%);
         height: 500px;
-    }
-
-    #navbar-left{
-        padding-top: 150px;
-        padding-left: 65px;
-        .navbar-left-item .material-icons{
-            font-size: 1.6em;
-            vertical-align: middle;
-        }
-        a.navbar-left-item{
-            text-decoration: none;
-            font-size: 1.2em;
-        }
-        a.navbar-left-item, a:active.navbar-left-item, a:visited.navbar-left-item{
-            color: white;
-        }
-        a:hover.navbar-left-item{
-            color: $my-primary-color;
-        }
-        ul{
-            li{
-                padding-bottom: 30px;
-            }
-        }
-
-    }
-
-    .md-sidenav-left{
-        md-content.md-default-theme, md-content {
-            background-color: transparent !important;
-        }
     }
 
     .bar-nps-title{
