fix: fechar menu lateral ao clicar em um item do menu

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -222,6 +222,9 @@ ul{
 }
 
 @media only screen and (min-width: 481px) {
+}
+
+@media only screen and (min-width: 600px) {
   a.navbar-left-item, a:active.navbar-left-item, a:visited.navbar-left-item{
       color: white;
   }
