--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -64,7 +64,7 @@ md-toolbar#nav_f{
     /*background-color: rgba(33, 150, 243, 0.49) !important;*/
     color: black !important;
     position: fixed;
-    transition: height .4s ease-out, max-height .3s ease-out, box-shadow .5s ease-in;
+    transition: height .3s ease-out, max-height .3s ease-out, box-shadow .3s ease-in;
     img{
         transition: width .3s ease-in-out;
         width: 200px;
@@ -156,6 +156,7 @@ md-toolbar#nav_f{
 .slogan-text{
     font-family: serif;
     font-style: italic;
+    transition: padding-top .3s ease-in-out;
 }
 
 #form-submit{
@@ -227,6 +228,9 @@ ul{
 @media only screen and (min-width: 600px) {
   a.navbar-left-item, a:active.navbar-left-item, a:visited.navbar-left-item{
       color: white;
+  }
+  a:hover.navbar-left-item{
+      color: $my-primary-color;
   }
   .transparent{
       background-color: transparent !important;
