--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -223,6 +223,79 @@ ul{
     font-size: 1.7em;
 }
 
+.quem-somos{
+  min-height: 320px;
+  background-color: #f7f7f7;
+  .quem-somos-emocoes{
+    i{
+      font-size: 4em;
+    }
+    .nps-green-text{
+      opacity: 1;
+    }
+    .nps-yellow-text{
+      opacity: 0.9;
+    }
+    .nps-red-text{
+      opacity: 0.6;
+    }
+  }
+  .quem-somos-text{
+    font-size: 1.2em;
+    line-height: 1.5em;
+    color: #444;
+  }
+}
+
+.nps-green-text{
+  color: #11c0b5;
+}
+
+.nps-yellow-text{
+  color: #efc863;
+}
+
+.nps-red-text{
+  color: #d35e4b;
+}
+
+// bar-chart
+.axis path,
+.axis line {
+  fill: none;
+  stroke: #000;
+  shape-rendering: crispEdges;
+}
+
+.bar-chart{
+  width: 100%;
+  height: 450px;
+  background-color: #72b3ea;
+  position: relative;
+  #bar-chart-bg{
+    width: 100%;
+    height: 450px;
+    position: absolute;
+    // margin-top: 10px;
+  }
+  .bar-chart-text{
+    width: 100%;
+    padding-top: 50px;
+    float: left;
+    z-index: 1;
+    position: relative;
+    text-shadow: 0 2px 0 rgba(0,0,0,0.3);
+  }
+  .bar-chart-text-title{
+    font-size: 2.2em;
+  }
+  .bar-chart-text-desc{
+    padding-top: 30px;
+    font-size: 1.5em;
+    color: #e1effb;
+  }
+}
+
 @media only screen and (min-width: 481px) {
 }
 
