--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2598,7 +2598,9 @@ ul li {
 
 .quem-somos {
   min-height: 320px;
-  background-color: #f7f7f7; }
+  background-color: #f7f7f7;
+  padding-top: 40px;
+  padding-bottom: 40px; }
   .quem-somos .quem-somos-emocoes i {
     font-size: 4em; }
   .quem-somos .quem-somos-emocoes .nps-green-text {
@@ -2721,11 +2723,12 @@ ul li {
       border-width: 10px;
       margin-top: -10px; }
 
-  .bar-chart-text-title {
-    font-size: 2.2em; }
-
-  .bar-chart-text-desc {
-    font-size: 1.5em; }
+  .bar-chart .bar-chart-text-title {
+    font-size: 2em; }
+  .bar-chart .bar-chart-text-desc {
+    font-size: 1.6em;
+    line-height: 1.3em;
+    margin-top: 10px; }
 
   .quem-somos {
     min-height: 320px; }
